SGLParserTestProject/SGL/AntlrParser/SGLParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g 2011-11-04 23:05:41

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


// -------------------------------------------------------------------------------------------------
//                This is a generated file, please don't change anything in here!
// -------------------------------------------------------------------------------------------------

using System.Collections.Generic;
using SGL;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

namespace  SGL.AntlrParser 
{
public partial class SGLParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"BLOCK", 
		"STATEMENTS", 
		"AT", 
		"IF", 
		"EXP", 
		"ID_LIST", 
		"VARDEF", 
		"GLOBVARDEF", 
		"ASSIGN", 
		"NEGATE", 
		"OBJMETHOD", 
		"STRING", 
		"FORDEC", 
		"FORCOND", 
		"FORITER", 
		"STRINGNOQUOTES", 
		"VARINC", 
		"VARDEC", 
		"BREAK", 
		"PARAM_TYPE_LIST", 
		"PARAM_NAME_LIST", 
		"METH_CALL", 
		"RETURN", 
		"Identifier", 
		"IntType", 
		"BooleanType", 
		"StringType", 
		"FloatType", 
		"ObjectType", 
		"IntegerAtom", 
		"FloatAtom", 
		"BooleanAtom", 
		"Sprite", 
		"Animation", 
		"Layer", 
		"Origin", 
		"LoopType", 
		"StringAtom", 
		"EscapeSequence", 
		"Letter", 
		"SGLIDDigit", 
		"UnicodeEscape", 
		"OctalEscape", 
		"HEX_DIGIT", 
		"WS", 
		"COMMENT", 
		"'{'", 
		"'}'", 
		"'method'", 
		"'('", 
		"')'", 
		"'void'", 
		"';'", 
		"','", 
		"'global'", 
		"'='", 
		"'.'", 
		"'while'", 
		"'for'", 
		"'if'", 
		"'else'", 
		"'at'", 
		"'break'", 
		"'return'", 
		"'?'", 
		"':'", 
		"'||'", 
		"'&&'", 
		"'=='", 
		"'!='", 
		"'<'", 
		"'>'", 
		"'<='", 
		"'>='", 
		"'+'", 
		"'-'", 
		"'*'", 
		"'/'", 
		"'%'", 
		"'++'", 
		"'--'", 
		"'new'", 
		"'null'"
    };

    public const int T__68 = 68;
    public const int T__69 = 69;
    public const int T__66 = 66;
    public const int T__67 = 67;
    public const int T__64 = 64;
    public const int T__65 = 65;
    public const int OBJMETHOD = 14;
    public const int T__62 = 62;
    public const int T__63 = 63;
    public const int Origin = 39;
    public const int SGLIDDigit = 44;
    public const int Sprite = 36;
    public const int PARAM_NAME_LIST = 24;
    public const int IntType = 28;
    public const int ID_LIST = 9;
    public const int T__61 = 61;
    public const int T__60 = 60;
    public const int EOF = -1;
    public const int BREAK = 22;
    public const int Identifier = 27;
    public const int IF = 7;
    public const int T__55 = 55;
    public const int AT = 6;
    public const int T__56 = 56;
    public const int T__57 = 57;
    public const int T__58 = 58;
    public const int T__51 = 51;
    public const int Animation = 37;
    public const int T__52 = 52;
    public const int T__53 = 53;
    public const int T__54 = 54;
    public const int EXP = 8;
    public const int FORITER = 18;
    public const int StringType = 30;
    public const int T__59 = 59;
    public const int LoopType = 40;
    public const int RETURN = 26;
    public const int COMMENT = 49;
    public const int STRINGNOQUOTES = 19;
    public const int VARDEF = 10;
    public const int T__50 = 50;
    public const int BooleanType = 29;
    public const int VARDEC = 21;
    public const int GLOBVARDEF = 11;
    public const int T__80 = 80;
    public const int T__81 = 81;
    public const int T__82 = 82;
    public const int T__83 = 83;
    public const int IntegerAtom = 33;
    public const int FloatType = 31;
    public const int FORDEC = 16;
    public const int StringAtom = 41;
    public const int PARAM_TYPE_LIST = 23;
    public const int METH_CALL = 25;
    public const int HEX_DIGIT = 47;
    public const int NEGATE = 13;
    public const int T__85 = 85;
    public const int T__84 = 84;
    public const int T__86 = 86;
    public const int BooleanAtom = 35;
    public const int WS = 48;
    public const int FORCOND = 17;
    public const int T__71 = 71;
    public const int T__72 = 72;
    public const int T__70 = 70;
    public const int UnicodeEscape = 45;
    public const int BLOCK = 4;
    public const int ASSIGN = 12;
    public const int Layer = 38;
    public const int STATEMENTS = 5;
    public const int ObjectType = 32;
    public const int FloatAtom = 34;
    public const int T__76 = 76;
    public const int T__75 = 75;
    public const int VARINC = 20;
    public const int T__74 = 74;
    public const int OctalEscape = 46;
    public const int Letter = 43;
    public const int EscapeSequence = 42;
    public const int T__73 = 73;
    public const int T__79 = 79;
    public const int STRING = 15;
    public const int T__78 = 78;
    public const int T__77 = 77;

    // delegates
    // delegators



        public SGLParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public SGLParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return SGLParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g"; }
    }



            public Dictionary<String,Method> methods = new Dictionary<String,Method>();

        	private void DefineMethod(String id, Object type, Object idList, Object block) {
                    // 'idList' is possibly null!  Create an empty tree in that case.  
                    CommonTree idListTree = idList == null ? new CommonTree() : (CommonTree)idList;

                    // 'type' is never null
                    String typeString = ((CommonTree)type).ToString();

                    // 'block' is never null 
                    CommonTree blockTree = (CommonTree)block;

                    // The method name with the exact same type of parameters after it, is the unique key 
                    String key = id;

    					if (idListTree.ChildCount > 0)
                        {
                            for (int a = 0; a < idListTree.GetChild(0).ChildCount; a++)
                            {
                                key += "-" + idListTree.GetChild(0).GetChild(a).ToString();
                            }
                        }
                    
                    Console.WriteLine("method found: " + key);
                    
                    //idListTree.GetChild(1).ChildCount;
                    methods.Add(key, new Method(id, typeString, idListTree, blockTree));
            	}
            	
    		public override void EmitErrorMessage(string msg)
                	{
                    	throw new SGLCompilerException(-1, "Antlr.Parser", msg);
                	}	




    	// Error reporting
    	/*
        private StdErrReporter errorReporter = new StdErrReporter();
        public override void EmitErrorMessage(String msg)
        {
        	errorReporter.ReportError(msg);
        }
        */
        
    	// For global variables (accessable anywhere)
    	//NullableDictionnary globalVariables = new NullableDictionnary();
    	
    	// For main variables (accessable anywhere but methods)
    	//Stack<NullableDictionnary> localVariables = new Stack<NullableDictionnary>();
    	//NullableDictionnary mainVariables = new NullableDictionnary();
    	
    	// This should tell the statements where they have to look up variables
    	//NullableDictionnary variableAccess = mainVariables;

    	//String output;
    	//public String GetOutput() {
    	//	return output;
    	//}


    public class compilationUnit_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "compilationUnit"
    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:138:1: compilationUnit : mainBlock ;
    public SGLParser.compilationUnit_return compilationUnit() // throws RecognitionException [1]
    {   
        SGLParser.compilationUnit_return retval = new SGLParser.compilationUnit_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        SGLParser.mainBlock_return mainBlock1 = default(SGLParser.mainBlock_return);



        try 
    	{
            // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:139:2: ( mainBlock )
            // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:139:4: mainBlock
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_mainBlock_in_compilationUnit193);
            	mainBlock1 = mainBlock();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, mainBlock1.Tree);

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"

    public class mainBlock_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "mainBlock"
    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:142:1: mainBlock : ( mainStatement | methodDef )* -> ^( BLOCK ^( STATEMENTS ( mainStatement )* ) ) ;
    public SGLParser.mainBlock_return mainBlock() // throws RecognitionException [1]
    {   
        SGLParser.mainBlock_return retval = new SGLParser.mainBlock_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        SGLParser.mainStatement_return mainStatement2 = default(SGLParser.mainStatement_return);

        SGLParser.methodDef_return methodDef3 = default(SGLParser.methodDef_return);


        RewriteRuleSubtreeStream stream_methodDef = new RewriteRuleSubtreeStream(adaptor,"rule methodDef");
        RewriteRuleSubtreeStream stream_mainStatement = new RewriteRuleSubtreeStream(adaptor,"rule mainStatement");
        try 
    	{
            // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:143:2: ( ( mainStatement | methodDef )* -> ^( BLOCK ^( STATEMENTS ( mainStatement )* ) ) )
            // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:143:4: ( mainStatement | methodDef )*
            {
            	// D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:143:4: ( mainStatement | methodDef )*
            	do 
            	{
            	    int alt1 = 3;
            	    int LA1_0 = input.LA(1);

            	    if ( ((LA1_0 >= Identifier && LA1_0 <= ObjectType) || LA1_0 == 58 || (LA1_0 >= 61 && LA1_0 <= 63) || (LA1_0 >= 65 && LA1_0 <= 67)) )
            	    {
            	        alt1 = 1;
            	    }
            	    else if ( (LA1_0 == 52) )
            	    {
            	        alt1 = 2;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:143:5: mainStatement
            			    {
            			    	PushFollow(FOLLOW_mainStatement_in_mainBlock206);
            			    	mainStatement2 = mainStatement();
            			    	state.followingStackPointer--;

            			    	stream_mainStatement.Add(mainStatement2.Tree);

            			    }
            			    break;
            			case 2 :
            			    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:143:21: methodDef
            			    {
            			    	PushFollow(FOLLOW_methodDef_in_mainBlock210);
            			    	methodDef3 = methodDef();
            			    	state.followingStackPointer--;

            			    	stream_methodDef.Add(methodDef3.Tree);

            			    }
            			    break;

            			default:
            			    goto loop1;
            	    }
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements



            	// AST REWRITE
            	// elements:          mainStatement
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (object)adaptor.GetNilNode();
            	// 144:8: -> ^( BLOCK ^( STATEMENTS ( mainStatement )* ) )
            	{
            	    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:144:11: ^( BLOCK ^( STATEMENTS ( mainStatement )* ) )
            	    {
            	    object root_1 = (object)adaptor.GetNilNode();
            	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(BLOCK, "BLOCK"), root_1);

            	    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:144:19: ^( STATEMENTS ( mainStatement )* )
            	    {
            	    object root_2 = (object)adaptor.GetNilNode();
            	    root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(STATEMENTS, "STATEMENTS"), root_2);

            	    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:144:32: ( mainStatement )*
            	    while ( stream_mainStatement.HasNext() )
            	    {
            	        adaptor.AddChild(root_2, stream_mainStatement.NextTree());

            	    }
            	    stream_mainStatement.Reset();

            	    adaptor.AddChild(root_1, root_2);
            	    }

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;
            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "mainBlock"

    public class block_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "block"
    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:147:1: block : ( statement )* -> ^( BLOCK ^( STATEMENTS ( statement )* ) ) ;
    public SGLParser.block_return block() // throws RecognitionException [1]
    {   
        SGLParser.block_return retval = new SGLParser.block_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        SGLParser.statement_return statement4 = default(SGLParser.statement_return);


        RewriteRuleSubtreeStream stream_statement = new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try 
    	{
            // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:148:2: ( ( statement )* -> ^( BLOCK ^( STATEMENTS ( statement )* ) ) )
            // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:148:4: ( statement )*
            {
            	// D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:148:4: ( statement )*
            	do 
            	{
            	    int alt2 = 2;
            	    int LA2_0 = input.LA(1);

            	    if ( ((LA2_0 >= Identifier && LA2_0 <= ObjectType) || LA2_0 == 58 || (LA2_0 >= 61 && LA2_0 <= 63) || (LA2_0 >= 65 && LA2_0 <= 67)) )
            	    {
            	        alt2 = 1;
            	    }


            	    switch (alt2) 
            		{
            			case 1 :
            			    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:148:4: statement
            			    {
            			    	PushFollow(FOLLOW_statement_in_block258);
            			    	statement4 = statement();
            			    	state.followingStackPointer--;

            			    	stream_statement.Add(statement4.Tree);

            			    }
            			    break;

            			default:
            			    goto loop2;
            	    }
            	} while (true);

            	loop2:
            		;	// Stops C# compiler whining that label 'loop2' has no statements



            	// AST REWRITE
            	// elements:          statement
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (object)adaptor.GetNilNode();
            	// 149:3: -> ^( BLOCK ^( STATEMENTS ( statement )* ) )
            	{
            	    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:149:6: ^( BLOCK ^( STATEMENTS ( statement )* ) )
            	    {
            	    object root_1 = (object)adaptor.GetNilNode();
            	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(BLOCK, "BLOCK"), root_1);

            	    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:149:14: ^( STATEMENTS ( statement )* )
            	    {
            	    object root_2 = (object)adaptor.GetNilNode();
            	    root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(STATEMENTS, "STATEMENTS"), root_2);

            	    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:149:27: ( statement )*
            	    while ( stream_statement.HasNext() )
            	    {
            	        adaptor.AddChild(root_2, stream_statement.NextTree());

            	    }
            	    stream_statement.Reset();

            	    adaptor.AddChild(root_1, root_2);
            	    }

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;
            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "block"

    public class singleBlock_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "singleBlock"
    // D:\\sgl4c#\\gitrepo\\SGLParserTestProject\\SGL\\AntlrParser\\SGL.g:152:1: singleBlock : semicolonStatement -> ^( BLOCK ^( STATEMENTS semicolonStatement ) ) ;
    public SGLParser.singleBlock_return singleBlock() // throws RecognitionException [1]
    {   
        SGLParser.singleBlock_return retval = new SGLParser.singleBlock_return();
        retval.Start = input.LT(1);

        object root_0 = null;
